--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
-.content{
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.header{
     height: 50px;
     border: 1px solid black;
+}
+
+.jumbo{
+    height: 200px;
+    border: 1px solid black;
+}
+
+.img{
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+    background-color: red;
+}
+
+.text{
+    width: 125px;
+    height: 50px;
+    border: 1px solid black;
+    background-color: blue;
+}
+
+.card{
+    height: 75px;
+    background-color: black;
 }
