--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .header{
     height: 50px;
-    border: 1px solid black;
+    background-color: red;
 }
 
 .content{
@@ -18,4 +18,16 @@
 .card{
     height: 75px;
     background-color: black;
+}
+
+.bg-header{
+    background-color: #2D3E50;
+}
+
+.bg-acqua{
+    background-color: #1BBC9B;
+}
+
+.bg-footer{
+    background-color: #3A546D;
 }
