--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,35 @@
     background-color: #3A546D;
 }
 
+
+.nav-item:hover{
+    background-color: #425c77;
+}
+
 .text-header-icon{
     color: #898886;
 }
 
+.hover-card{
+    transition: all .5s
+}
 
+.not-hover-card{
+    transition: all .5s
+}
+
+.hover-card:hover{
+    transform: scale(1.2);
+}
+
+.hover-card-container:hover > :not(:hover) {
+    opacity: 0.75;
+    transform: scale(0.9);
+}
+
+
+
+/* FOOTER LINK */
 .circle-icon-footer{
     border: 1px solid #fff;
     border-radius: 100%;
@@ -92,7 +116,7 @@
     align-items: center;
     width: 50px;
     height: 50px;
-    transition: all .25s;
+    transition: transform .25s , opacity .5s;
 }
 
 .circle-icon-footer:hover{
@@ -102,3 +126,10 @@
 .circle-icon-footer i{
     font-size: 20px;   
 }
+
+
+.icons-footer-container:hover > :not(:hover) {
+    opacity: 0.25;
+}
+
+
